<resources>
    <string name="app_name">Afk Protect</string>
    <string name="main_menu_1">Settings</string>
    <string name="main_menu_2">About</string>
    <string name="main_menu_3">Refresh</string>
    <string name="main_menu_4">Internal Log</string>

    <string name="update_title">20200430</string>
    <string name="update_info">1.Fixed Internal test search issue\n
    2.add overlay ignore setting\n
    3.package name change/app name change\n</string>

    <string name="main_card_statistic_title">Statistic</string>
    <string name="main_card_statistic_indicator">Saved for %d times</string>
    <string name="main_card_history_title">History</string>
    <string name="main_card_history_indicator">Check your saving history</string>
    <string name="main_card_profile_title">Application Profile</string>
    <string name="main_card_profile_indicator">%d profiles</string>
    <string name="main_card_help">Help and Support</string>

    <string name="accessibility_label">Afk Protect - Core</string>
    <string name="accessibility_desc">Core service to listen the foreground application and perform protect operation</string>
    <string name="float_title">Afk Protect</string>
    <string name="float_countdown">%ds to lock</string>
    <string name="float_locking">Locking</string>
    <string name="admin_label">Afk protect - Auto lock</string>
    <string name="admin_desc">enable auto lockscreen feature</string>

    <string name="record_title">Record</string>
    <string name="record_start_time">Afk auto lock start time</string>
    <string name="record_end_time">Afk auto lock end time</string>
    <string name="record_elapsed_time">Lock period</string>
    <string name="record_screen_on_times">Screen turned on times</string>

    <string name="profile_configure_title">Configure</string>
    <string name="profile_configure_afk_time">Afk time</string>
    <string name="profile_configure_hour">Hour</string>
    <string name="profile_configure_minute">Min.</string>
    <string name="profile_configure_second">Sec.</string>
    <string name="profile_configure_subtitle_config">Configs</string>
    <string name="profile_configure_try_stop_playing">Try stop player</string>
    <string name="profile_configure_try_audiofocus_volume">Try gain audio focus to stop player</string>
    <string name="profile_configure_try_exit">Try perform global back press</string>
    <string name="profile_configure_try_exit_times">Back times</string>
    <string name="profile_configure_app_pick">Pick app</string>
    <string name="profile_configure_no_pack">Package should not be null</string>
    <string name="profile_configure_tutorial_notice_title">Tutorial/Notice(Essential)</string>
    <string name="profile_configure_tutorial_notice">You may need to restart Activity in the target application to activate timer for the first time you setup profile, the timer will reset when the window is changed
    ,you may set 15 secs to try the effect. Also some overlay app may affect window recognize, you can go settings to ignore them</string>
    <string name="profile_configure_invalid_param">Invalid</string>
    <string name="profile_configure_too_low_second">Time can\'t be less than 15 seconds</string>

    <string name="profile_search">Search</string>
    <string name="profile_search_hint">App name/Package Name</string>

    <string name="pref_trigger_category">Trigger</string>
    <string name="pref_trigger_summary">Some trigger value</string>
    <string name="pref_trigger_1_title">Ignore some apps window state</string>
    <string name="pref_trigger_1_summary">Some overlay app may cause misread of window change, use this to ignore them</string>

    <!--SetupWizard-->
    <string name="setup_step_next">Next</string>
    <string name="setup_step_next_final">Done</string>
    <string name="setup_step_before">Forward</string>
    <string name="setup_1_intro">Hello my friend, before you can start, let\'s take some minutes to complete the setup\n\n
    This is a tool help you to auto exit/pause video or some keep-screen-on app after you performed a custom period of afk such as fell asleep</string>
    <string name="setup_2_float_window_title">Float window overlay</string>
    <string name="setup_2_accessibility_title">Accessibility</string>
    <string name="setup_2_device_admin_title">Device Admin(Lock screen)</string>
    <string name="setup_2_device_admin_summary">Once you grant this permission you need to turn off this permission manually before you uninstall</string>
    <string name="setup_granted">Granted</string>
    <string name="setup_denied">Denied, click to request</string>
    <string name="setup_current_update">Current Update</string>
    <string name="setup_permission">Permissions</string>

    <string name="til_error_inv_param">Invalid parameter</string>
    <string name="toast_copied">Copied</string>
    <string name="toast_perm_denied">Permission Denied</string>
    <string name="ad_pb">Yes</string>
    <string name="ad_nb">Cancel</string>
    <string name="ad_pb2">Yes</string>
    <string name="ad_nb2">No</string>
    <string name="ad_nb3">Close</string>
    <string name="ad_nb4">Clear</string>
    <string name="ad_processing">Processing…</string>
    <string name="empty_view">Empty</string>

    <!--About-->
    <string name="au_l_1">Version</string>
    <string name="au_l_2">Developer</string>
    <string name="au_l_2_1">Alcatraz, Mr_Dennis</string>
    <string name="au_l_3">Check sourcecode</string>
    <string name="au_l_4">Open source Licenses</string>
    <string name="au_l_4_1">Respect to opensource</string>
    <string name="au_l_5">Donate</string>
    <string name="au_l_5_1">Thanks</string>
    <string name="au_osp">Opensource Projects</string>

    <!--If you are translating, do not translate below-->
    <string name="transition_profile_indicator" translatable="false">transition_profile_indicator</string>
    <string name="transition_profile_icon" translatable="false">transition_profile_icon</string>
    <string name="transition_profile_fab" translatable="false">transition_profile_fab</string>
    <string name="transition_profile_general_app_icon" translatable="false">transition_profile_general_app_icon</string>
    <string name="transition_profile_general_app_name" translatable="false">transition_profile_general_app_name</string>
</resources>
