<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/configure_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/configure_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:title="@string/profile_configure_title" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/configure_pack_pick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/configure_pack_icon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:transitionName="@string/transition_profile_general_app_icon"
                    app:srcCompat="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="48dp"
                    android:layout_marginRight="48dp"
                    android:layout_toEndOf="@id/configure_pack_icon"
                    android:layout_toRightOf="@id/configure_pack_icon"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/configure_pack_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
                        android:textSize="16sp"
                        android:transitionName="@string/transition_profile_general_app_name" />

                    <TextView
                        android:id="@+id/configure_pack_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:textAllCaps="false" />

                </LinearLayout>

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:scaleX="0.6"
                    android:scaleY="0.6"
                    android:tint="@color/base_gray_tint"
                    app:srcCompat="@drawable/ic_chevron_right_black_24dp" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="4dp"
                android:text="@string/profile_configure_afk_time"
                android:textColor="@color/pink_colorPrimary" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/configure_afk_time_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:paddingStart="18dp"
                    android:tint="@color/base_gray_tint"
                    app:srcCompat="@drawable/ic_access_time_black_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/configure_afk_time_icon"
                    android:layout_toEndOf="@id/configure_afk_time_icon"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/configure_afk_hour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginRight="16dp"
                            android:hint="@string/profile_configure_hour"
                            android:text="0" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/configure_afk_min"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginRight="16dp"
                            android:hint="@string/profile_configure_minute"
                            android:text="30" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/configure_afk_sec"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginRight="16dp"
                            android:hint="@string/profile_configure_second"
                            android:text="0" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="4dp"
                android:text="@string/profile_configure_subtitle_config"
                android:textColor="@color/pink_colorPrimary" />

            <LinearLayout
                android:id="@+id/configure_try_broadcast_pause"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:clickable="true"
                android:descendantFocusability="blocksDescendants"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="24dp"
                    android:paddingStart="16dp"
                    android:tint="@color/base_gray_tint"
                    app:srcCompat="@drawable/ic_pause_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/profile_configure_try_stop_playing"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|end"
                    android:orientation="vertical">

                    <Switch
                        android:id="@+id/configure_try_broadcast_pause_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:checked="false"
                        android:clickable="false"
                        android:focusable="false" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/configure_try_audiofocus"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:clickable="true"
                android:descendantFocusability="blocksDescendants"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="24dp"
                    android:paddingStart="16dp"
                    android:tint="@color/base_gray_tint"
                    app:srcCompat="@drawable/ic_volume_off_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/profile_configure_try_audiofocus_volume"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|end"
                    android:orientation="vertical">

                    <Switch
                        android:id="@+id/configure_try_audiofocus_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:checked="false"
                        android:clickable="false"
                        android:focusable="false" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/configure_try_back_button"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:clickable="true"
                android:descendantFocusability="blocksDescendants"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="24dp"
                    android:paddingStart="16dp"
                    android:tint="@color/base_gray_tint"
                    app:srcCompat="@drawable/ic_exit_to_app_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/profile_configure_try_exit"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|end"
                    android:orientation="vertical">

                    <Switch
                        android:id="@+id/configure_try_back_button_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:checked="false"
                        android:clickable="false"
                        android:focusable="false" />
                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/configure_back_times"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/profile_configure_try_exit_times"
                    android:text="1" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>