<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/setup_2_float_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:visibility="visible"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardElevation="2dp"
            app:cardCornerRadius="4dp"
            app:cardMaxElevation="4dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="false">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/setup_2_float_check_indicator"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:scaleX="0.9"
                    android:scaleY="0.9"
                    app:srcCompat="@drawable/ic_close_red_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_toEndOf="@+id/setup_2_float_check_indicator"
                    android:gravity="end"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/setup_2_float_check_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="2dp"
                        android:text="@string/setup_2_float_window_title"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
                        android:textColor="@color/pink_colorPrimary"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/setup_2_float_check_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/setup_denied" />

                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/setup_2_accessibility_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:visibility="visible"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp"
            app:cardMaxElevation="4dp"
            app:cardPreventCornerOverlap="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/setup_2_accessibility_check_indicator"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:scaleX="0.9"
                    android:scaleY="0.9"
                    app:srcCompat="@drawable/ic_close_red_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_toEndOf="@+id/setup_2_accessibility_check_indicator"
                    android:gravity="end"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/setup_2_accessibility_check_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="2dp"
                        android:text="@string/setup_2_accessibility_title"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
                        android:textColor="@color/pink_colorPrimary"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/setup_2_accessibility_check_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/setup_denied" />

                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/setup_2_device_admin_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:visibility="visible"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp"
            app:cardMaxElevation="4dp"
            app:cardPreventCornerOverlap="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/setup_2_device_admin_check_indicator"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:scaleX="0.9"
                    android:scaleY="0.9"
                    app:srcCompat="@drawable/ic_close_red_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_toEndOf="@+id/setup_2_device_admin_check_indicator"
                    android:gravity="end"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/setup_2_device_admin_check_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="2dp"
                        android:text="@string/setup_2_device_admin_title"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
                        android:textColor="@color/pink_colorPrimary"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:text="@string/setup_2_device_admin_summary" />

                    <TextView
                        android:id="@+id/setup_2_device_admin_check_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/setup_denied" />

                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>